k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unigraduate
  labels:
    name: unigraduate
