k8s/deployment.yaml
# deploy "unigraduate" image to k8s cluster

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: unigraduate
  name: unigraduate
  labels:
    app: unigraduate
spec:
  replicas: 2
  selector:
    matchLabels:
      app: unigraduate
  template:
    metadata:
      labels:
        app: unigraduate
    spec:
      containers:
        - name: unigraduate
          image: waseemtannous/unigraduate
          ports:
            - containerPort: 8080
