k8s/service.yaml
# service for unigraduate
#
apiVersion: v1
kind: Service
metadata:
  namespace: unigraduate
  name: unigraduate
  labels:
    app: unigraduate

spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: unigraduate
